2005-10-23 Carlos Nieves Onega <cnieves@iespana.es>	
	* include/prototype.h, noweb/x_fileselect.nw, noweb/x_preview.nw:
	Removed a conditional #if in x_preview_setup. It was introduced in
	my last changes.
	x_preview_setup should create the drawing_area. Otherwise, it 
	will segfault when adding a new component.
	Added check at the beginning of x_fileselect_setup to use the 
	old function when adding a new component, before doing anything 
	else.
	
2005-10-17 Carlos Nieves Onega <cnieves@iespana.es>	
	* include/prototype.h, noweb/x_fileselect.nw, noweb/x_preview.nw:
	Updated file load/save window using GTK widgets. File preview is 
	missing yet.

2005-10-15 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/x_image.nw: Added some code to make sure non-default sized
	image are correctly created.  Added code to convert pixbufs to 
	greyscale to implement the image-color rc keyword.

	* configure.ac: Added check for gtk+ 2.6.x or greater to support some
	future additions.

2005-10-15 Carlos Nieves Onega <cnieves@iespana.es>	
        * noweb/x_image.nw: Remove the grid when exporting to PNG.
	Reorganize and comment some code.
	Remove text origin markers when exporting to PNG.
	
2005-10-15 Carlos Nieves Onega <cnieves@iespana.es>	
        * noweb/prototype.h, noweb/i_callbacks.nw, noweb/x_image.nw:
	Added code to export the schematic to PNG, including pictures,
	without using libgdgeda.
	
2005-10-09 Ales Hvezda   <ahvezda@geda.seul.org>

	* examples/gEDA_Flow.sch: Added simple PCB design flow diagram drawn
	by Stuart.
	
2005-10-05 Werner Hoch <werner.ho@gmx.de>
	* noweb/o_net.nw: added the patch from David Carr.
	when drawing a net, there will be two segments in an L-shape.
	the shift-key changes the drawing path.

2005-10-04 Werner Hoch <werner.ho@gmx.de>
	* noweb/x_dialog.nw: removed gettext makro from a programm string

2005-09-30 Carlos Nieves Onega <cnieves@iespana.es>	
	* noweb/o_misc.nw, noweb/i_callbacks.nw: 
	Added code to embed/unembed pictures.
