@@ -143,6 +143,8 @@ int   default_grid_fixed_threshold = 10;
 int   default_print_vector_threshold = 3;
 int   default_add_attribute_offset = 50;
 
+int   default_auto_save_interval = 120;
+
 int   default_width = 800;  /* these variables are used in x_window.c */
 int   default_height = 600;
 
@@ -151,7 +153,7 @@ int   default_text_display_zoomfactor = 30;
 
 int default_text_feedback = ONLY_WHEN_READABLE;
 
-@ %def default_graphic_color default_text_color default_text_size default_text_caps default_attribute_color default_detachattr_color default_net_color default_bus_color default_net_endpoint_color default_override_net_color default_override_bus_color default_override_pin_color default_net_endpoint_mode default_net_midpoint_mode default_pin_color default_pin_style default_net_style default_bus_style default_grid_color default_background_color default_select_color default_bb_color default_lock_color default_zoom_box_color default_logic_bubble_color default_actionfeedback_mode default_zoom_with_pan default_object_clipping default_do_logging default_logging_dest default_embed_complex default_include_complex default_text_output default_snap_size default_stroke_color default_paper_width default_paper_height default_scrollbars_flag default_print_orientation default_image_color default_print_color default_print_color_background default_print_output_type default_print_output_capstyle default_series_name default_untitled_name default_scheme_directory default_font_directory default_bitmap_directory default_log_window default_log_window_type default_third_button default_middle_button default_middle_button default_net_consolidate default_file_preview default_enforce_hierarchy default_text_origin_marker default_fast_mousepan default_raise_dialog_boxes default_attribute_promotion default_promote_invisible default_keep_invisible default_continue_component_place default_undo_levels default_undo_control default_undo_type default_draw_grips default_netconn_rubberband default_text_display_zoomfactor default_text_feedback default_sort_component_library default_setpagedevice_orientation default_setpagedevice_pagesize default_bus_ripper_size default_bus_ripper_symname default_bus_ripper_type default_bus_ripper_rotation default_force_boundingbox default_image_width default_image_height
+@ %def default_graphic_color default_text_color default_text_size default_text_caps default_attribute_color default_detachattr_color default_net_color default_bus_color default_net_endpoint_color default_override_net_color default_override_bus_color default_override_pin_color default_net_endpoint_mode default_net_midpoint_mode default_pin_color default_pin_style default_net_style default_bus_style default_grid_color default_background_color default_select_color default_bb_color default_lock_color default_zoom_box_color default_logic_bubble_color default_actionfeedback_mode default_zoom_with_pan default_object_clipping default_do_logging default_logging_dest default_embed_complex default_include_complex default_text_output default_snap_size default_stroke_color default_paper_width default_paper_height default_scrollbars_flag default_print_orientation default_image_color default_print_color default_print_color_background default_print_output_type default_print_output_capstyle default_series_name default_untitled_name default_scheme_directory default_font_directory default_bitmap_directory default_log_window default_log_window_type default_third_button default_middle_button default_middle_button default_net_consolidate default_file_preview default_enforce_hierarchy default_text_origin_marker default_fast_mousepan default_raise_dialog_boxes default_attribute_promotion default_promote_invisible default_keep_invisible default_continue_component_place default_undo_levels default_undo_control default_undo_type default_draw_grips default_netconn_rubberband default_text_display_zoomfactor default_text_feedback default_sort_component_library default_setpagedevice_orientation default_setpagedevice_pagesize default_bus_ripper_size default_bus_ripper_symname default_bus_ripper_type default_bus_ripper_rotation default_force_boundingbox default_image_width default_image_height default_auto_save_interval
 
 @section Function @code{i_vars_set()}
 
@@ -265,6 +267,12 @@ i_vars_set(TOPLEVEL *w_current)
   w_current->grid_fixed_threshold  = default_grid_fixed_threshold;
   w_current->print_vector_threshold  = default_print_vector_threshold;
   w_current->add_attribute_offset  = default_add_attribute_offset;
+
+  w_current->auto_save_interval = default_auto_save_interval;
+  if (w_current->auto_save_interval != 0) {
+    w_current->auto_save_timeout = g_timeout_add(w_current->auto_save_interval*1000,
+						 s_page_autosave, w_current);
+  }
 }
 
 
