@@ -357,6 +357,9 @@
 #define FLOAT_PIN               2
 #define DUP_NET_NAME            4
 
+/* Max level of symlinks */
+#define MAX_LINK_LEVEL 256
+
 #if defined(__MINGW32__) && !defined(M_PI)
 #define M_PI  3.14159265358979323846
 #endif
