@@ -1,3 +1,10 @@
+2005-10-29 Carlos Nieves Onega <cnieves@iespana.es>	
+        * include/i_vars.h, include/prototype.h, lib/system-gschemrc.in,
+	  noweb/g_rc.nw, noweb/g_register.nw, noweb/i_vars.nw, 
+	  noweb/o_undo.nw:
+	  Added support for backup copies and autosaving every 
+	  "interval" seconds (configurable through system-gschemrc).
+	
 2005-10-23 Carlos Nieves Onega <cnieves@iespana.es>	
 	* include/prototype.h, noweb/x_fileselect.nw, noweb/x_preview.nw:
 	Removed a conditional #if in x_preview_setup. It was introduced in
